Add links to benefits on the results page
Also made the button a 'target="_blank"' link because we want them
to open in new pages.

--- a/locales/en.json
+++ b/locales/en.json
@@ -22,32 +22,38 @@
   "ccb_payment.box1": "One-time automatic payment in May",
   "ccb_payment.box2": "$300 per child",
   "ccb_payment.header": "Extra payment from Canada Child Benefit",
+  "ccb_payment.link": "https://www.canada.ca/en/department-finance/economic-response-plan.html#individuals",
   "ccb_payment.linktext": "Learn more about the Canada Child Benefit",
-  "ccb_payment.preamble": "<p>The benefit can help if you:</p><ul class='list-disc list-outside'><li>Care for a child under 18 years old</li></ul><p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. </li><li><a href=\"\">Dates of payments are available</a> online.</li></ul>",
+  "ccb_payment.preamble": "<p>The benefit can help if you:</p><ul class='list-disc list-outside'><li>Care for a child under 18 years old</li></ul><p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. </li><li><a href='https://www.canada.ca/en/revenue-agency/services/child-family-benefits/benefit-payment-dates.html' target='_blank'>Dates of payments are available</a> online.</li></ul>",
   "cerb.box1": "$500 per week, paid every 4 weeks",
   "cerb.box2": "Up to 4 months",
   "cerb.box3": "First payment within 10 days of applying",
   "cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
+  "cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
   "cerb.linktext": "Apply for CERB",
   "cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you:</p><ul class='list-outside list-disc'><li>Stopped working for at least 14 consecutive days because of COVID-19.</li> <li>Earned at least $5,000 in the last 12 months.</li></ul><p>Good to know:</p><ul class='list-outside list-disc'><li>Available from March 15 to October 3, 2020.</li><li>You’ll need to re-apply for each 4-week period you’re not working.</li><li>You’ll need to pay income tax on these payments in the future.</li> </ul>",
   "days_stopped_working.1": "Fewer than 14 days in a row with no work",
   "days_stopped_working.2": "More than 14 days in a row with no work",
   "ei_regular.box1": "55% of your income, paid every 2 weeks",
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
+  "ei_regular.link": "https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html",
   "ei_regular.linktext": "Apply for EI Regular Benefits",
   "ei_regular.preamble": "<p>EI can help if you:</p><ul class='list-disc list-outside'><li>Paid into EI, usually through your employer. Check your pay stub to see if you have EI deductions.</li><li>Worked the minimum number of “insurable hours.”</li></ul><p>Good to know:</p><ul><li>Even if you left your job voluntarily for your health needs during COVID-19, you may still be eligible for EI.</li><li>The number of weeks you get paid depends on how many “insurable hours” you worked in the last 52 weeks.</li></ul>",
   "ei_regular_and_cerb.box1": "$500 per week, paid every 4 weeks",
+  "ei_regular_and_cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
   "ei_regular_and_cerb.linktext": "Apply for EI Regular Benefits and CERB",
   "ei_regular_and_cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you</p><ul><li>Stopped working for at least 14 consecutive days because of COVID-19.</li><li>Earned at least $5,000 in the last 12 months.</li></ul><p>Good to know:</p><ul class='list-disc list-outside'><li>Even if you left your job voluntarily for your health needs during COVID-19, you may still be eligible for EI.</li><li>You’ll need to re-apply for CERB for each 4-week period you’re not working</li></ul><p>If you’re eligible for both Employment Insurance (EI) and the Canada Emergency Response Benefit (CERB), you will receive CERB for the first 4 months. Then you’ll automatically start receiving EI Regular Benefits after, if you’re still not working.</p>",
   "ei_regular_cerb.header": "Apply for both CERB and EI Regular Benefits",
   "ei_sickness_cerb.box1": "$500 per week, paid every 4 weeks",
   "ei_sickness_cerb.box2": "Up to 4 months",
+  "ei_sickness_cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
   "ei_sickness_cerb.linktext": "Apply for EI Sickness Benefits and CERB",
   "ei_sickness_cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you:</p><ul><li>Stopped working for at least 14 consecutive days because of COVID-19.</li><li>Earned at least $5,000 in the last 12 months.</li></ul><p>If you’re eligible for both EI  Sickness Benefits and CERB, you will receive CERB for the first 4 months you’re off work. Then you’ll automatically start receiving EI Sickness Benefits after, if you’re still not working.</p>",
   "ei_sickness_cerb.header": "Apply for both CERB and Employment Insurance (EI) Sickness Benefits",
   "ei_workshare.box1": "Receive EI benefits",
   "ei_workshare.box2": "Up to 76 weeks",
   "ei_workshare.header": "Talk to your employer and coworkers about Employment Insurance (EI) Work-Sharing ",
+  "ei_workshare.link": "https://www.canada.ca/en/employment-social-development/corporate/notices/coronavirus.html#h4.02",
   "ei_workshare.linktext": "Learn more about EI Work-Sharing",
   "ei_workshare.preamble": "<p>The benefit can help if:</p><ul class='list-disc list-outside'><li>Your hours have been reduced by 10 to 60% because of COVID-19</li></ul><p>To do this:</p><ul class='list-disc list-outside'><li>You would enter into an agreement with your employer and other coworkers who do the exact same work as you.</li><li> All employees who do the same work need to agree to share the work equally, and your employer has to agree as well. </li></ul>",
   "errors.multipleChoiceGeneric": "You must select one of the options listed below",
@@ -75,13 +81,15 @@
   "gst_credit.box1": "Automatic payment in April if you already receive the GST credit",
   "gst_credit.box2": "$400 for single people<br> $600 for couples",
   "gst_credit.header": "More money through the GST credit",
+  "gst_credit.link": "https://www.canada.ca/en/department-finance/economic-response-plan.html#individuals",
   "gst_credit.linktext": "Learn more about the GST credit",
-  "gst_credit.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the GST credit.</li><li><a href=\"\">Dates of payments are available</a> online.</li></ul>",
+  "gst_credit.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the GST credit.</li><li><a href='https://www.canada.ca/en/revenue-agency/services/child-family-benefits/benefit-payment-dates.html' target='_blank'>Dates of payments are available</a> online.</li></ul>",
   "lost_job.1": "Yes, all your income",
   "lost_job.2": "Some of your income",
   "lost_job.3": "No, your income is the same",
   "mortgage_deferral.box1": "Skip mortgage payments until you’re able to pay again",
   "mortgage_deferral.header": "Contact your bank to delay mortgage payments",
+  "mortgage_deferral.link": "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19",
   "mortgage_deferral.linktext": "Learn more about help with your mortgage",
   "mortgage_deferral.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>The bank will still charge interest</li><li> When you’re able to pay again, you’ll have to pay the interest that was collected during the deferral, as well as your regular payments.</li><li> You can also talk to your bank about special payment arrangements or re-amortizing your mortgage. </li></ul>",
   "mortgage_payments.1": "Yes, you’re worried about your mortgage.",
@@ -89,6 +97,7 @@
   "mortgage_payments.3": "No, you’re not worried at this time.",
   "phase.desc": "This site will change as we test ideas.",
   "rent_help.header": "In most provinces, you cannot be evicted for not paying rent",
+  "rent_help.link": "https://www.cmhc-schl.gc.ca/en/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
   "rent_help.linktext": "Check with your provincial government for more details",
   "rent_help.preamble": "<ul class='list-disc list-outside'><li>Provincial governments are in charge of rental housing rules. </li><li> At the moment, you cannot be evicted for not paying rent. </li></ul>",
   "required": "(required)",
@@ -101,6 +110,7 @@
   "rrif.1": "Yes",
   "rrif.2": "No",
   "rrif.header": "Lower mandatory withdrawals for your Registered Retirement Income Fund (RRIF)",
+  "rrif.link": "https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-retirement-income-fund-rrif.html",
   "rrif.linktext": "Contact your bank for more details",
   "rrif.preamble": "<ul class='list-disc list-outside'><li>The mandatory amount you need to withdraw from your RRIF in 2020 will be 25% lower so you can save more money. </li></ul>",
   "rrif.title": "RRIF",
