--- a/locales/fr.json
+++ b/locales/fr.json
@@ -22,32 +22,38 @@
   "ccb_payment.box1": "Versement automatique au mois de mai ",
   "ccb_payment.box2": "300 $ par enfant ",
   "ccb_payment.header": "Paiements additionnels de l’Allocation canadienne pour enfants ",
+  "ccb_payment.link": "https://www.canada.ca/fr/ministere-finances/plan-intervention-economique.html#particuliers",
   "ccb_payment.linktext": "En savoir plus à propos de l’Allocation canadienne pour enfant ",
-  "ccb_payment.preamble": "<p>Cette prestation peut vous aider si :</p><ul class='list-disc list-outside'><li>vous avez la charge d’un enfant de moins de 18 ans. </li></ul><p>Bon à savoir :</p><ul class='list-disc list-outside'><li>Consultez vos relevés bancaires afin de déterminer si vous recevez déjà l’Allocation canadienne pour enfant.</li><li><a href=\"\">Consultez les dates de versement des prestations</a>.</li></ul>",
+  "ccb_payment.preamble": "<p>Cette prestation peut vous aider si :</p><ul class='list-disc list-outside'><li>vous avez la charge d’un enfant de moins de 18 ans. </li></ul><p>Bon à savoir :</p><ul class='list-disc list-outside'><li>Consultez vos relevés bancaires afin de déterminer si vous recevez déjà l’Allocation canadienne pour enfant.</li><li><a href='https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/dates-versement-prestations.html' target='_blank'>Consultez les dates de versement des prestations</a>.</li></ul>",
   "cerb.box1": "500 $ par semaine, versement aux 4 semaines",
   "cerb.box2": "Pendant 4 mois maximum",
   "cerb.box3": "À recevoir au plus tard 10 jours après la demande",
   "cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
+  "cerb.link": "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
   "cerb.linktext": "Demander la PCU",
   "cerb.preamble": "<p>La Prestation canadienne d’urgence (PCU) peut vous aider si :</p><ul class='list-outside list-disc'><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID-19.</li> <li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Bon à savoir :</p><ul class='list-outside list-disc'><li>Offerte du 15 mars au 3 octobre 2020.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines.</li><li>Ces montants sont imposables.</li> </ul>",
   "days_stopped_working.1": false,
   "days_stopped_working.2": false,
   "ei_regular.box1": "55 % de votre revenu, versement aux 2 semaines",
   "ei_regular.header": "Présenter une demande pour les prestations régulières de l’assurance-emploi (AE)",
+  "ei_regular.link": "https://www.canada.ca/fr/services/prestations/ae/assurance-emploi-reguliere/demande.html",
   "ei_regular.linktext": "Demander les prestations regulières de l’assurance-emploi",
   "ei_regular.preamble": "<p>L’assurance-emploi peut vous aider si</p><ul class='list-disc list-outside'><li>vous avez contribué à l’assurance-emploi, normalement par votre employeur. Consultez votre paye pour déterminer si vous avez contribué à l’assurance emploi.</li><li>vous avez travaillé le nombre minimum “d’heure assurables”.</li></ul><p>Bon à savoir :</p><ul><li>Vous pourriez être admissible à l’assurance-emploi même si vous avez quitté votre emploi volontairement pour des raisons de santé liées à la COVID-19.</li><li>Le nombre de semaines admissible dépend du nombre “d’heures assurables” travaillées lors des 52 semaines précédentes.</li></ul>",
   "ei_regular_and_cerb.box1": "500 $ par semaine, versement aux 4 semaines",
+  "ei_regular_and_cerb.link": "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
   "ei_regular_and_cerb.linktext": "Demander les prestations regulières de l’assurance-emploi et la PCU",
   "ei_regular_and_cerb.preamble": "<p>La PCU peut vous aider si:</p><ul><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID-19.</li><li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Bon à savoir :</p><ul class='list-disc list-outside'><li>Vous pourriez être admissible à l’assurance-emploi même si vous avez quitté votre emploi volontairement pour des raisons de santé liées à la COVID-19.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines</li></ul><p>Si vous êtes admissible à l’assurance-emploi ainsi qu’à la Prestation canadienne d’urgence (PCU), vous recevrez la PCU pendant les 4 premiers mois. Vous recevrez ensuite les prestations régulières d’assurance-emploi si vous êtes toujours sans emploi.</p>",
   "ei_regular_cerb.header": "Présenter une demande pour la PCU, ainsi que les prestations régulières de l’assurance-emploi (AE)",
   "ei_sickness_cerb.box1": "500 $ par semaine, versement aux 4 semaines",
   "ei_sickness_cerb.box2": "Pendant 4 mois maximum",
+  "ei_sickness_cerb.link": "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
   "ei_sickness_cerb.linktext": "Demander les prestations de maladie de l'assurance-emploi et la PCU",
   "ei_sickness_cerb.preamble": "<p>la Prestation canadienne d’urgence (PCU) peut vous aider si :</p><ul><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID-19.</li><li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Si vous êtes admissible aux prestations de maladie de l'assurance-emploi ainsi qu’à la Prestation canadienne d’urgence (PCU), vous recevrez la PCU pendant les 4 premiers mois de votre arrêt de travail. Vous recevrez ensuite automatiquement les prestations régulières d’assurance-emploi si vous êtes toujours sans emploi.</p>",
   "ei_sickness_cerb.header": "Présenter une demande pour la PCU, ainsi que les prestations de maladie de l'assurance-emploi ",
   "ei_workshare.box1": "Recevoir des prestations d’assurance-emploi",
   "ei_workshare.box2": "Pendant 76 semaines maximum",
   "ei_workshare.header": "Parlez à votre employeur et à vos collègues du programme Travail partagé de l’assurance-emploi",
+  "ei_workshare.link": "https://www.canada.ca/fr/emploi-developpement-social/ministere/avis/coronavirus.html#h4.02",
   "ei_workshare.linktext": "En savoir plus à propos du programme Travail partagé de l’assurance-emploi",
   "ei_workshare.preamble": "<p>Cette prestation peut vous aider si :</p><ul class='list-disc list-outside'><li>vos heures de travail ont été réduites de 10 à 60 % en raison de la COVID-19.</li></ul><p>Pour ce faire :</p><ul class='list-disc list-outside'><li>Vous devrez conclure une entente avec votre employeur et les autres employés effectuant les mêmes tâches que vous.</li><li>Tous les employés qui effectuent les mêmes tâches que vous doivent accepter de partager la charge de travail équitablement, et votre employeur doit aussi accepter.</li></ul>",
   "errors.multipleChoiceGeneric": "You must select one of the options listed below",
@@ -74,13 +80,15 @@
   "gst_credit.box1": "Versement automatique au mois d’avril si vous recevez déjà le crédit pour la TPS/TVH",
   "gst_credit.box2": "400 $ pour les célibataires<br> 600 $ pour les couples",
   "gst_credit.header": "Argent supplémentaire grâce au crédit pour la TPS/TVH",
+  "gst_credit.link": "https://www.canada.ca/fr/ministere-finances/plan-intervention-economique.html#particuliers",
   "gst_credit.linktext": "En savoir plus à propos du crédit pour la TPS/TVH",
-  "gst_credit.preamble": "<p>Bon à savoir :</p><ul class='list-disc list-outside'><li>Vérifiez votre compte bancaire pour savoir si vous recevez déjà le crédit pour la TPS/TVH.</li><li><a href=\"\">Les dates de versement</a> sont indiquées en ligne.</li></ul>",
+  "gst_credit.preamble": "<p>Bon à savoir :</p><ul class='list-disc list-outside'><li>Vérifiez votre compte bancaire pour savoir si vous recevez déjà le crédit pour la TPS/TVH.</li><li><a href='https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/dates-versement-prestations.html' target='_blank'>Les dates de versement</a> sont indiquées en ligne.</li></ul>",
   "lost_job.1": "Vous avez perdu votre revenu en entier.",
   "lost_job.2": "Vous avez perdu une partie de votre revenu.",
   "lost_job.3": "Votre revenu n’est pas affecté par la COVID-19.",
   "mortgage_deferral.box1": "Interrompez vos paiements hypothécaires jusqu’à  ce que vous puissiez les payer à nouveau",
   "mortgage_deferral.header": "Contacter votre banque afin de repousser vos paiements d’hypothèque",
+  "mortgage_deferral.link": "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19?l=fr",
   "mortgage_deferral.linktext": "Vérifier auprès de votre banque pour en savoir plus",
   "mortgage_deferral.preamble": "<p>Bon à savoir :</p><ul class='list-disc list-outside'><li>La banque chargera quand même de l’intérêt.</li><li> Lorsque vous pourrez effectuer vos paiements à nouveau, vous devrez payer l’intérêt encouru depuis le sursis en plus de vos paiements réguliers.</li><li> Vous pouvez aussi parler à votre banque à propos de plans de paiements spéciaux afin de ré-amortir votre hypothèque. </li></ul>",
   "mortgage_payments.1": "Oui, vous êtes inquiet au sujet de votre hypothèque.",
@@ -88,6 +96,7 @@
   "mortgage_payments.3": "Non, vous n’êtes pas inquiet en ce moment.",
   "phase.desc": "This site will change as we test ideas.",
   "rent_help.header": "Dans la majorité des provinces, vous ne pouvez pas être expulsé pour ne pas avoir payé votre loyer",
+  "rent_help.link": "https://www.cmhc-schl.gc.ca/fr/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
   "rent_help.linktext": "Vérifier auprès de mon gouvernement provincial pour en savoir plus",
   "rent_help.preamble": "<ul class='list-disc list-outside'><li>Les gouvernements provinciaux sont responsables de la réglementation des logements locatifs.</li><li> À l’heure actuelle, on ne peut pas vous expulser si vous n’avez pas payé votre loyer</li></ul>",
   "required": "required",
@@ -99,6 +108,7 @@
   "rrif.1": "rrif.1",
   "rrif.2": "rrif.2",
   "rrif.header": "Diminution du montant de retrait obligatoire de votre fond enregistré de revenu de retraite",
+  "rrif.link": "https://www.canada.ca/fr/agence-revenu/services/impot/particuliers/sujets/fonds-enregistre-revenu-retraite-ferr.html",
   "rrif.linktext": "Contactez votre banque pour plus de détails",
   "rrif.preamble": "<ul class='list-disc list-outside'><li>Le montant obligatoire que vous devrez retirer de votre fond enregistré de revenu de retraire en 2020 sera 25% plus bas afin que vous puissiez économiser. </li></ul>",
   "start.intro.1": "Answer some questions to find out about financial help.",
