--- a/locales/fr.json
+++ b/locales/fr.json
@@ -96,6 +96,8 @@
     "one": "%s programme d’aide pour vous",
     "other": "%s programmes d’aide pour vous"
   },
+  "results_title_no_cerb": "Revenez voir dans une semaine ou deux",
+  "results.no_cerb.preamble": "Pour l’instant, les gens qui ont perdu une portion de leur revenu, et non l’entièreté de leur revenu ne sont pas couverts par la Prestation canadienne d’urgence (PCU). De nouvelles prestations sont constamment créées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil dans une semaine ou deux.",
   "rrif.1": "rrif.1",
   "rrif.2": "rrif.2",
   "rrif.header": "Diminution du montant de retrait obligatoire de votre fond enregistré de revenu de retraite",
