--- a/locales/en.json
+++ b/locales/en.json
@@ -125,8 +125,9 @@
   "student_loan.box1": "Payments automatically paused",
   "student_loan.box2": "From March 30, 2020 until September 30, 2020",
   "student_loan.header": "No student loan payments for 6 months",
+  "student_loan.link": "https://www.csnpe-nslsc.canada.ca/en/home",
   "student_loan.linktext": "Learn more about help with student loan payments",
-  "student_loan.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>You don’t need to apply to pause your payments.</li><li> Pre-authorized payments are stopped.</li><li> Log in to your <a href='#'>National Student Loans Service Centre</a> account to see how much you will save</li></ul>",
+  "student_loan.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>You don’t need to apply to pause your payments.</li><li> Pre-authorized payments are stopped.</li><li> Log in to your <a href='https://www.csnpe-nslsc.canada.ca/en/home' target='_blank'>National Student Loans Service Centre</a> account to see how much you will save</li></ul>",
   "wordmark.alt": "Symbol of the Government of Canada",
   "your_situation.no_income.1": "You lost your job or your employer closed",
   "your_situation.no_income.2": "You’re self-employed and had to close",
