--- a/locales/en.json
+++ b/locales/en.json
@@ -13,7 +13,7 @@
   "Please correct the errors on the page": "Please correct the errors on the page",
   "Skip to main content": "Skip to main content",
   "app.phase": "ALPHA",
-  "app.title": "Money for COVID‑19",
+  "app.title": "Money for COVID—19",
   "button.back": "Back",
   "ccb.1": "Yes",
   "ccb.2": "No",
