--- a/locales/en.json
+++ b/locales/en.json
@@ -118,7 +118,7 @@
   "start.intro.2": "Your answers do not impact your eligibility. See our <a href='https://digital.canada.ca/legal/privacy/' target='_blank'>Privacy policy</a> and <a href='https://digital.canada.ca/legal/terms/' target='_blank'>Terms and conditions</a> for more information. ",
   "start.submit": "Start now",
   "start.subtitle": "Find out what financial help is available",
-  "start.title": "Money for COVID‑19",
+  "start.title": "Money for COVID—19",
   "start_over": "Start over",
   "student_debt.1": "Yes",
   "student_debt.2": "No",
