add translation for alpha banner

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -90,7 +90,7 @@
   "mortgage_payments.1": "Oui, vous êtes inquiet au sujet de votre hypothèque.",
   "mortgage_payments.2": "Oui, vous êtes inquiet au sujet de votre loyer.",
   "mortgage_payments.3": "Non, vous n’êtes pas inquiet en ce moment.",
-  "phase.desc": "This site will change as we test ideas.",
+  "phase.desc": "Ce site évoluera au fur et à mesure que nous testons des idées.",
   "rent_help.header": "Dans la majorité des provinces, vous ne pouvez pas être expulsé pour ne pas avoir payé votre loyer",
   "rent_help.link": "https://www.cmhc-schl.gc.ca/fr/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
   "rent_help.linktext": "Vérifier auprès de mon gouvernement provincial pour en savoir plus",
