add to the rest of them

--- a/locales/en.json
+++ b/locales/en.json
@@ -15,8 +15,8 @@
   "app.phase": "ALPHA",
   "app.title": "Money for COVID—19",
   "button.back": "Back",
-  "ccb.1": "Yes",
-  "ccb.2": "No",
+  "ccb.1": "Yes.",
+  "ccb.2": "No.",
   "ccb.3": "You’re not sure.",
   "ccb.hint": "Check your bank account to find out if you’ve been receiving the Canada Child Benefit. <a href='https://www.canada.ca/en/revenue-agency/services/child-family-benefits/benefit-payment-dates.htmlk'>Dates of payments are available.</a> ",
   "ccb_payment.box1": "One-time automatic payment in May",
@@ -74,9 +74,9 @@
   "gross_income.1": "Under $4,999.",
   "gross_income.2": "$5,000 or more.",
   "gross_income.title": "Income earned",
-  "gst.1": "Yes",
-  "gst.2": "No",
-  "gst.3": "You're not sure",
+  "gst.1": "Yes.",
+  "gst.2": "No.",
+  "gst.3": "You're not sure.",
   "gst.hint": "Check your bank account to find out if you’ve been receiving the GST credit. <a href='#'>Dates of payments are available</a>. ",
   "gst_credit.box1": "Automatic payment in April if you already receive the GST credit",
   "gst_credit.box2": "$400 for single people<br> $600 for couples",
@@ -124,8 +124,8 @@
   "start.subtitle": "Find out what financial help is available",
   "start.title": "Money for COVID—19",
   "start_over": "Start over",
-  "student_debt.1": "Yes",
-  "student_debt.2": "No",
+  "student_debt.1": "Yes.",
+  "student_debt.2": "No.",
   "student_loan.box1": "Payments automatically paused",
   "student_loan.box2": "From March 30, 2020 until September 30, 2020",
   "student_loan.header": "No student loan payments for 6 months",
