--- a/locales/fr.json
+++ b/locales/fr.json
@@ -15,8 +15,8 @@
   "app.phase": "ALPHA",
   "app.title": "Money for COVID‑19",
   "button.back": "Retour",
-  "ccb.1": "Oui",
-  "ccb.2": "Non",
+  "ccb.1": "Oui.",
+  "ccb.2": "Non.",
   "ccb.3": "Je ne sais pas.",
   "ccb.hint": "Consultez vos relevés bancaires afin de déterminer si vous recevez l’Allocation canadienne pour enfants. <a href='https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/dates-versement-prestations.html'>Consultez les dates de versement des prestations.</a>",
   "ccb_payment.box1": "Versement automatique au mois de mai ",
@@ -118,8 +118,8 @@
   "start.intro.1": "Answer some questions to find out about financial help.",
   "start.intro.banner.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get an emergency loan from the government.",
   "start.intro.banner.2": "Details are available online.",
-  "student_debt.1": "Oui",
-  "student_debt.2": "Non",
+  "student_debt.1": "Oui.",
+  "student_debt.2": "Non.",
   "start.intro.2": "Vos réponses n’influenceront pas votre admissibilité. Consultez notre <a href='https://numerique.canada.ca/transparence/confidentialite/' target='_blank'>Politique de confidentialité</a> et <a href='https://numerique.canada.ca/transparence/avis/' target='_blank'>l’Avis</a> pour en savoir plus.",
   "start.submit": "Commencer",
   "start.subtitle": "Trouvez quelle aide financière vous est offerte",
