fix an english key, and typo for value

--- a/locales/en.json
+++ b/locales/en.json
@@ -139,11 +139,11 @@
   "your_situation.no_income.4": "You were on parental leave recently, but you cannot return to work due to COVID-19.",
   "your_situation.no_income.5": "You were on Employment Insurance in the last 12 months and your claim has ended.",
   "your_situation.no_income.6": "You left your job due to unsafe conditions for your health.",
-  "your_situation.no_income.7": "You’re sick or in mandatory quarantine on unpaid leave.",
+  "your_situation.no_income.7": "You’re sick or in mandatory quarantine and on unpaid leave.",
   "your_situation.some_income.1": "Your hours have been reduced due to COVID‑19.",
   "your_situation.some_income.2": "You’re retired and lost your part-time work.",
   "your_situation.some_income.3": "You’ve lost one of your income streams but you still have some paid work.",
-  "your_situation.some_income.4": "You’re sick or in mandatory quarantine on unpaid leave.",
+  "your_situation.some_income.4": "You’re sick or in mandatory quarantine and on unpaid leave.",
   "your_situation.unchanged_income.1": "You’re working from home.",
   "your_situation.unchanged_income.2": "You’re on paid leave.",
   "your_situation.unchanged_income.3": "You’re retired.",
