Revert "Feature/q 2 content"

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -68,11 +68,15 @@
   "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
   "form.rrif": "form.rrif",
   "form.student_debt": "Devez vous payer une dette d’étude au gouvernement?",
-  "form.your_situation.no_income": "Choisissez la situation qui vous décrit le mieux.",
-  "form.your_situation.some_income": "Choisissez la situation qui vous décrit le mieux.",
-  "form.your_situation.unchanged_income": "Choisissez la situation qui vous décrit le mieux.",
+  "form.your_situation.no_income": false,
+  "form.your_situation.some_income": false,
+  "form.your_situation.unchanged_income": false,
   "gross_income.1": "Moins de 4999 $.",
   "gross_income.2": "5000 $ ou plus.",
+  "gst.1": false,
+  "gst.2": false,
+  "gst.3": false,
+  "gst.hint": false,
   "gst_credit.box1": "Versement automatique au mois d’avril si vous recevez déjà le crédit pour la TPS/TVH",
   "gst_credit.box2": "400 $ pour les célibataires<br> 600 $ pour les couples",
   "gst_credit.header": "Argent supplémentaire grâce au crédit pour la TPS/TVH",
@@ -90,12 +94,12 @@
   "mortgage_payments.1": "Oui, vous êtes inquiet au sujet de votre hypothèque.",
   "mortgage_payments.2": "Oui, vous êtes inquiet au sujet de votre loyer.",
   "mortgage_payments.3": "Non, vous n’êtes pas inquiet en ce moment.",
-  "phase.desc": "Ce site évoluera au fur et à mesure que nous testons des idées.",
+  "phase.desc": "This site will change as we test ideas.",
   "rent_help.header": "Dans la majorité des provinces, vous ne pouvez pas être expulsé pour ne pas avoir payé votre loyer",
   "rent_help.link": "https://www.cmhc-schl.gc.ca/fr/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
   "rent_help.linktext": "Vérifier auprès de mon gouvernement provincial pour en savoir plus",
   "rent_help.preamble": "<ul class='list-disc list-outside'><li>Les gouvernements provinciaux sont responsables de la réglementation des logements locatifs.</li><li> À l’heure actuelle, on ne peut pas vous expulser si vous n’avez pas payé votre loyer</li></ul>",
-  "required": "(obligatoire)",
+  "required": "required",
   "results.header_text": false,
   "results_title": {
     "one": "%s programme d’aide pour vous",
@@ -128,20 +132,18 @@
   "student_loan.linktext": "En savoir plus à propos de l’aide disponible pour votre dette d’étude",
   "student_loan.preamble": "<p>Bon à savoir:</p><ul class='list-disc list-outside'><li>Vous n’avez pas à faire de demande afin de suspendre vos paiements.</li><li> Les paiements pré-autorisés sont suspendus.</li><li> Consultez vous à votre compte au <a href='https://www.csnpe-nslsc.canada.ca/fr/Accueil' target='_blank'>Centre de service national de prêts aux étudiants</a> pour plus de détails.</li></ul>",
   "wordmark.alt": "Symbol of the Government of Canada",
-  "your_situation.no_income.1": "Vous avez perdu votre emploi et votre employeur a cessé ses activités.",
-  "your_situation.no_income.2": "Vous êtes travailleur autonome et n’avez aucun revenu.",
-  "your_situation.no_income.3": "Vous êtes en congé sans solde pour prendre soin d’un enfant ou d’un proche malade.",
-  "your_situation.no_income.4": "Vous étiez récemment en congé parental, mais ne pouvez pas retrourner travailler en raison de la COVID-19.",
-  "your_situation.no_income.5": "Vous receviez l’assurance-emploi depuis les 12 derniers mois et votre prestation est terminée.",
-  "your_situation.no_income.6": "Vous avez quitté votre emploi car les conditions de travail n’étaient pas sécuritaires pour votre santé.",
-  "your_situation.no_income.7": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
-  "your_situation.some_income.1": "Votre horaire de travail a diminué en raison de la COVID-19.",
-  "your_situation.some_income.2": "Vous êtes retraité et avez perdu un emploi à temps partiel.",
-  "your_situation.some_income.3": "Vous avez perdu un de vos revenu, mais avez toujours un revenu secondaire.",
-  "your_situation.some_income.4": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
-  "your_situation.unchanged_income.1": "Vous faites du télétravail.",
-  "your_situation.unchanged_income.2": "Vous êtes en congé payé.",
-  "your_situation.unchanged_income.3": "Vous êtes retraité.",
+  "your_situation.no_income.1": false,
+  "your_situation.no_income.2": false,
+  "your_situation.no_income.3": false,
+  "your_situation.no_income.4": false,
+  "your_situation.no_income.5": false,
+  "your_situation.no_income.6": false,
+  "your_situation.some_income.1": false,
+  "your_situation.some_income.2": false,
+  "your_situation.some_income.3": false,
+  "your_situation.unchanged_income.1": false,
+  "your_situation.unchanged_income.2": false,
+  "your_situation.unchanged_income.3": false,
   "mortgage_payments.title": "Votre logement",
   "ccb.title": "Allocation canadienne pour enfants",
   "student_debt.title": "Dette d’études",
@@ -151,8 +153,5 @@
   "start.details.p.1": "Si vous êtes un Canadien actuellement à l’étranger et que vous avez besoin d’aide financière pour revenir au Canada, vous pouvez demander <a href='https://voyage.gc.ca/assistance/info-d-urgence/assistance-financiere/covid-19-aide-financiere' target='_blank'>un prêt d’urgence</a>.",
   "lost_job.title": "Perte de revenu en lien avec la COVID—19",
   "results.other_potential_help": "Aide supplémentaire disponible",
-  "results.other_potential_help.preamble": "L’aide suivante est également disponible :",
-  "some_income.title": "Votre situation",
-  "no_income.title": "Votre situation",
-  "unchanged_income.title": "Votre situation"
+  "results.other_potential_help.preamble": "L’aide suivante est également disponible :"
 }
