update french and english on 3a

--- a/locales/en.json
+++ b/locales/en.json
@@ -63,7 +63,7 @@
   "footer.link2": "https://digital.canada.ca/legal/terms/",
   "footer.link2.desc": "Terms and conditions",
   "form.ccb": "Do you receive the Canada Child Benefit?",
-  "form.gross_income": "How much total income before taxes did you earn from paid work in the last 12 months?",
+  "form.gross_income": "How much total income before taxes did you earn from paid work in 2019 or the last 12 months?",
   "form.lost_job": "Choose the description that best fits your situation",
   "form.mortgage_payments": "Are you worried about making mortgage or rent payments?",
   "form.rrif": "Do you have a Registered Retirement Income Fund (RRIF)?",
@@ -71,7 +71,7 @@
   "form.your_situation.no_income": "Choose the description that best fits your situation",
   "form.your_situation.some_income": "Choose the description that best fits your situation",
   "form.your_situation.unchanged_income": "Choose the description that best fits your situation",
-  "gross_income.1": "Under $4,999.",
+  "gross_income.1": "$4,999 or less.",
   "gross_income.2": "$5,000 or more.",
   "gross_income.title": "Income earned",
   "gst.1": "Yes.",
