--- a/locales/fr.json
+++ b/locales/fr.json
@@ -63,7 +63,7 @@
   "footer.link2": "https://numerique.canada.ca/transparence/avis/",
   "footer.link2.desc": "Avis",
   "form.ccb": false,
-  "form.gross_income": "Quel est la somme totale de vos revenus de travail (avant taxes) des 12 derniers mois?",
+  "form.gross_income": "Quel est votre revenu total (avant taxes) en 2019 ou des 12 dernier mois ?",
   "form.lost_job": "Choisissez la situation qui vous décrit le mieux",
   "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
   "form.rrif": "form.rrif",
@@ -71,7 +71,7 @@
   "form.your_situation.no_income": "Choisissez la situation qui vous décrit le mieux.",
   "form.your_situation.some_income": "Choisissez la situation qui vous décrit le mieux.",
   "form.your_situation.unchanged_income": "Choisissez la situation qui vous décrit le mieux.",
-  "gross_income.1": "Moins de 4999 $.",
+  "gross_income.1": "4999 $ ou moins.",
   "gross_income.2": "5000 $ ou plus.",
   "gst_credit.box1": "Versement automatique au mois d’avril si vous recevez déjà le crédit pour la TPS/TVH",
   "gst_credit.box2": "400 $ pour les célibataires<span class='hide--mobile'>, </span><br class='hide--desktop' />600 $ pour les couples",
