--- a/locales/fr.json
+++ b/locales/fr.json
@@ -31,7 +31,7 @@
   "cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "cerb.link": "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
   "cerb.linktext": "Demander la PCU",
-  "cerb.preamble": "<p>La Prestation canadienne d’urgence (PCU) peut vous aider si :</p><ul class='list-outside list-disc'><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID—19.</li> <li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Bon à savoir :</p><ul class='list-outside list-disc'><li>Offerte du 15 mars au 3 octobre 2020.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines.</li><li>Ces montants sont imposables.</li> </ul>",
+  "cerb.preamble": "<p>La Prestation canadienne d’urgence (PCU) peut vous aider si :</p><ul class='list-outside list-disc'><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID—19.</li> <li>Vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Bon à savoir :</p><ul class='list-outside list-disc'><li>Offerte du 15 mars au 3 octobre 2020.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines.</li><li>Ces montants sont imposables.</li> </ul>",
   "days_stopped_working.1": false,
   "days_stopped_working.2": false,
   "ei_regular.box1": "55 % de votre revenu<span class='hide--mobile'>, </span><br class='hide--desktop' />versement aux 2 semaines",
