--- a/locales/en.json
+++ b/locales/en.json
@@ -48,7 +48,7 @@
   "ei_sickness_cerb.box2": "Up to 4 months",
   "ei_sickness_cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
   "ei_sickness_cerb.linktext": "Apply for EI Sickness Benefits and CERB",
-  "ei_sickness_cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you:</p><ul><li>Stopped working for at least 14 consecutive days because of COVID—19.</li><li>Earned at least $5,000 in the last 12 months.</li></ul><p>If you’re eligible for both EI  Sickness Benefits and CERB, you will receive CERB for the first 4 months you’re off work. Then you’ll automatically start receiving EI Sickness Benefits after, if you’re still not working.</p>",
+  "ei_sickness_cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you:</p><ul><li>Stopped working for at least 14 consecutive days because of COVID—19.</li><li>Earned at least $5,000 in 2019 or the last 12 months.</li></ul><p>If you’re eligible for both EI  Sickness Benefits and CERB, you will receive CERB for the first 4 months you’re off work. Then you’ll automatically start receiving EI Sickness Benefits after, if you’re still not working.</p>",
   "ei_sickness_cerb.header": "Apply for both CERB and Employment Insurance (EI) Sickness Benefits",
   "ei_workshare.box1": "Receive EI benefits",
   "ei_workshare.box2": "Up to 76 weeks",
