--- a/locales/en.json
+++ b/locales/en.json
@@ -19,7 +19,7 @@
   "ccb.2": "No.",
   "ccb.3": "You’re not sure.",
   "ccb.hint": "Check your bank account to find out if you’ve been receiving the Canada Child Benefit. <a href='https://www.canada.ca/en/revenue-agency/services/child-family-benefits/benefit-payment-dates.htmlk'>Dates of payments are available.</a> ",
-  "ccb_payment.box1": "One-time automatic payment in May",
+  "ccb_payment.box1": "Automatic payment in May",
   "ccb_payment.box2": "$300 per child",
   "ccb_payment.header": "Extra payment from Canada Child Benefit",
   "ccb_payment.link": "https://www.canada.ca/en/department-finance/economic-response-plan.html#individuals",
@@ -40,6 +40,7 @@
   "ei_regular.linktext": "Apply for EI Regular Benefits",
   "ei_regular.preamble": "<p>EI can help if you:</p><ul class='list-disc list-outside'><li>Paid into EI, usually through your employer. Check your pay stub to see if you have EI deductions.</li><li>Worked the minimum number of “insurable hours.”</li></ul><p>Good to know:</p><ul><li>Even if you left your job voluntarily for your health needs during COVID—19, you may still be eligible for EI.</li><li>The number of weeks you get paid depends on how many “insurable hours” you worked in the last 52 weeks.</li></ul>",
   "ei_regular_and_cerb.box1": "$500 per week<span class='hide--mobile'>, </span><br class='hide--desktop' />paid every 4 weeks",
+  "ei_regular_and_cerb.box2": "First payment within 10 days of applying",
   "ei_regular_and_cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
   "ei_regular_and_cerb.linktext": "Apply for EI Regular Benefits and CERB",
   "ei_regular_and_cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you</p><ul><li>Stopped working for at least 14 consecutive days because of COVID—19.</li><li>Earned at least $5,000 in the last 12 months.</li></ul><p>Good to know:</p><ul class='list-disc list-outside'><li>Even if you left your job voluntarily for your health needs during COVID—19, you may still be eligible for EI.</li><li>You’ll need to re-apply for CERB for each 4-week period you’re not working</li></ul><p>If you’re eligible for both Employment Insurance (EI) and the Canada Emergency Response Benefit (CERB), you will receive CERB for the first 4 months. Then you’ll automatically start receiving EI Regular Benefits after, if you’re still not working.</p>",
@@ -96,10 +97,10 @@
   "mortgage_payments.2": "Yes, you’re worried about your rent.",
   "mortgage_payments.3": "No, you’re not worried at this time.",
   "phase.desc": "This site will change as we test ideas.",
-  "rent_help.header": "In most provinces, you cannot be evicted for not paying rent",
+  "rent_help.header": "In most provinces and territories, you cannot be evicted for not paying rent",
   "rent_help.link": "https://www.cmhc-schl.gc.ca/en/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
   "rent_help.linktext": "Check with your provincial government for more details",
-  "rent_help.preamble": "<ul class='list-disc list-outside'><li>Provincial governments are in charge of rental housing rules. </li><li> At the moment, you cannot be evicted for not paying rent. </li></ul>",
+  "rent_help.preamble": "<ul class='list-disc list-outside'><li>Provincial governments are in charge of rental housing rules. </li><li> In most provinces and territories, you cannot be evicted for not paying rent. </li></ul>",
   "required": "(required)",
   "results.banner": "You missed a couple questions at the beginning. <a href='/clear'>Start over</a> to get your full results.",
   "results.header_text": "Based on what you’ve told us, the following help is available:",
