--- a/locales/fr.json
+++ b/locales/fr.json
@@ -32,8 +32,6 @@
   "cerb.link": "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
   "cerb.linktext": "Demander la PCU",
   "cerb.preamble": "<p>La Prestation canadienne d’urgence (PCU) peut vous aider si :</p><ul class='list-outside list-disc'><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID—19.</li> <li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Bon à savoir :</p><ul class='list-outside list-disc'><li>Offerte du 15 mars au 3 octobre 2020.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines.</li><li>Ces montants sont imposables.</li> </ul>",
-  "days_stopped_working.1": false,
-  "days_stopped_working.2": false,
   "ei_regular.box1": "55 % de votre revenu<span class='hide--mobile'>, </span><br class='hide--desktop' />versement aux 2 semaines",
   "ei_regular.header": "Présenter une demande pour les prestations régulières de l’assurance-emploi (AE)",
   "ei_regular.link": "https://www.canada.ca/fr/services/prestations/ae/assurance-emploi-reguliere/demande.html",
@@ -97,7 +95,7 @@
   "rent_help.linktext": "Vérifier auprès de mon gouvernement provincial pour en savoir plus",
   "rent_help.preamble": "<ul class='list-disc list-outside'><li>Les gouvernements provinciaux sont responsables de la réglementation des logements locatifs.</li><li> Dans la majorité des provinces et territoires, vous ne pouvez pas être expulsé pour ne pas avoir payé votre loyer</li></ul>",
   "required": "(obligatoire)",
-  "results.header_text": false,
+  "results.header_text": "Selon les informations que vous nous avez fournies, l’aide suivante est possible :",
   "results_title": {
     "one": "%s programme d’aide pour vous",
     "other": "%s programmes d’aide pour vous"
@@ -157,5 +155,5 @@
   "no_income.title": "Votre situation",
   "unchanged_income.title": "Votre situation",
   "gross_income.title": "Votre revenu",
-  "results.banner": "results.banner"
+  "results.banner": "Vous n’avez pas répondu à quelques questions. <a href='/clear'>Recommencez</a> pour recevoir vos résultats complets."
 }
