add a couple more missing french keys

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -10,7 +10,7 @@
   "Next": "Continuer",
   "Not found": "Not found",
   "Page not found": "Page not found",
-  "Please correct the errors on the page": "Please correct the errors on the page",
+  "Please correct the errors on the page": "Veuillez corriger les erreurs trouvées dans la page",
   "Skip to main content": "Skip to main content",
   "app.phase": "ALPHA",
   "app.title": "Money for COVID‑19",
@@ -55,7 +55,7 @@
   "ei_workshare.link": "https://www.canada.ca/fr/emploi-developpement-social/ministere/avis/coronavirus.html#h4.02",
   "ei_workshare.linktext": "En savoir plus à propos du programme Travail partagé de l’assurance-emploi",
   "ei_workshare.preamble": "<p>Cette prestation peut vous aider si :</p><ul class='list-disc list-outside'><li>vos heures de travail ont été réduites de 10 à 60 % en raison de la COVID—19.</li></ul><p>Pour ce faire :</p><ul class='list-disc list-outside'><li>Vous devrez conclure une entente avec votre employeur et les autres employés effectuant les mêmes tâches que vous.</li><li>Tous les employés qui effectuent les mêmes tâches que vous doivent accepter de partager la charge de travail équitablement, et votre employeur doit aussi accepter.</li></ul>",
-  "errors.multipleChoiceGeneric": "You must select one of the options listed below",
+  "errors.multipleChoiceGeneric": "Vous devez choisir une option ci dessous",
   "feedback": "Feedback",
   "footer.link1": "https://numerique.canada.ca/transparence/confidentialite/",
   "footer.link1.desc": "Politique de Confidentialité",
