some french translations and locale file cleanup

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,19 +1,17 @@
 {
   "404": "404",
   "500": "500",
-  "Cancel": false,
-  "Error:": false,
-  "Government of Canada": "Government of Canada",
-  "Internal server error": "Internal server error",
-  "Language Selection": "Language Selection",
-  "Language selection: French": "Language selection: French",
+  "Cancel": "Annuler",
+  "Error:": "Erreur",
+  "Government of Canada": "Gouvernement du Canada",
+  "Internal server error": "Erreur interne du serveur",
+  "Language Selection": "Sélection de la langue",
   "Next": "Continuer",
-  "Not found": "Not found",
-  "Page not found": "Page not found",
+  "Page not found": "Page non trouvée",
   "Please correct the errors on the page": "Veuillez corriger les erreurs trouvées dans la page",
-  "Skip to main content": "Skip to main content",
+  "Skip to main content": "Passer au contenu principal",
   "app.phase": "ALPHA",
-  "app.title": "Money for COVID‑19",
+  "app.title": "Argent pour la COVID‑19",
   "button.back": "Retour",
   "ccb.1": "Oui.",
   "ccb.2": "Non.",
@@ -126,7 +124,7 @@
   "student_loan.link": "https://www.csnpe-nslsc.canada.ca/fr/Accueil",
   "student_loan.linktext": "En savoir plus à propos de l’aide disponible pour votre dette d’étude",
   "student_loan.preamble": "<p>Bon à savoir:</p><ul class='list-disc list-outside'><li>Vous n’avez pas à faire de demande afin de suspendre vos paiements.</li><li> Les paiements pré-autorisés sont suspendus.</li><li> Consultez vous à votre compte au <a href='https://www.csnpe-nslsc.canada.ca/fr/Accueil' target='_blank'>Centre de service national de prêts aux étudiants</a> pour plus de détails.</li></ul>",
-  "wordmark.alt": "Symbol of the Government of Canada",
+  "wordmark.alt": "Symbole du gouvernement du Canada",
   "your_situation.no_income.1": "Vous avez perdu votre emploi et votre employeur a cessé ses activités.",
   "your_situation.no_income.2": "Vous êtes travailleur autonome et n’avez aucun revenu.",
   "your_situation.no_income.3": "Vous êtes en congé sans solde pour prendre soin d’un enfant ou d’un proche malade.",
